force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>Child object of Work Request Cases</description>
    <label>Job(Deprecated)</label>
    <nameField>
        <displayFormat>JB-{00000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>