force-app/main/default/objects/Job__c/fields/Approved_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Customer</label>
    <type>Checkbox</type>
</CustomField>