force-app/main/default/objects/Job__c/fields/BalanceDue1__c.field-meta.xml
<CustomField>
    <fullName>BalanceDue1__c</fullName>
    <formula>Total_Amount_Job__c -  TotalPaid1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Total Amount Job - Total Paid</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>