force-app/main/default/objects/Job__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Specify the Comments by a Technician</inlineHelpText>
    <label>Technician&#39;s Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>