force-app/main/default/objects/Job__c/fields/No_of_Labors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Labors__c</fullName>
    <inlineHelpText>Specifies the number of hours allotted to the Labor for the Job.</inlineHelpText>
    <label>No of Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>