force-app/main/default/objects/Job__c/fields/No_of_Parts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parts__c</fullName>
    <inlineHelpText>Roll up Summary : Specifies the number of Job Line Items under this particular Job.</inlineHelpText>
    <label>No of Parts</label>
    <summaryForeignKey>Job_Line_Item__c.Related_to_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>