force-app/main/default/objects/Job__c/fields/Total_Amount_Job__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Job__c</fullName>
    <formula>IF(Discount__c &lt; (Total_Amount_on_Parts_del__c +  Total_Cost_Labor__c +  Shop_Supplies_Total__c),(Total_Amount_on_Parts_del__c +  Total_Cost_Labor__c +  Shop_Supplies_Total__c ) -  Discount__c ,Total_Amount_on_Parts_del__c +  Total_Cost_Labor__c +  Shop_Supplies_Total__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : (Total Amount on Parts + Total Cost Labor + Shop Supplies Total) LESS Discount</inlineHelpText>
    <label>Total Amount Job</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>