force-app/main/default/objects/Job__c/fields/Total_Amount_on_Parts_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_on_Parts_del__c</fullName>
    <inlineHelpText>Roll up Summary : Calculates the Amount on Parts by multiplying Quantity of each Part with its Unit Price.</inlineHelpText>
    <label>Total Amount on Parts</label>
    <summarizedField>Job_Line_Item__c.Total__c</summarizedField>
    <summaryForeignKey>Job_Line_Item__c.Related_to_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>