force-app/main/default/objects/Job__c/fields/Total_Hours_Job__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Job__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Specifies the number of hours allotted for the job</inlineHelpText>
    <label>Hours Allowed for Job</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>