force-app/main/default/objects/Job__c/fields/TotalPaid1__c.field-meta.xml
<CustomField>
    <fullName>TotalPaid1__c</fullName>
    <formula>Claim_Labor_Paid_Amount__c +  Parts_Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Claim Labor Paid Amount + Parts Paid Amount</inlineHelpText>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>