force-app/main/default/objects/Job__c/fields/Unique_Job_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Job_id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id for the Job record used for development</inlineHelpText>
    <label>Unique_Job_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>