force-app/main/default/objects/Job__c/fields/Work_Order_Warranty_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Warranty_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order/Warranty Work Order1</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>