force-app/main/default/objects/Job__c/fields/Work_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_Request__c</fullName>
    <label>Work Order/Warranty Work Order</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>Work Order</value>
        </filterItems>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>Warranty Work Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>