force-app/main/default/objects/Job__c/fields/Work_Requested__c.field-meta.xml
<CustomField>
    <fullName>Work_Requested__c</fullName>
    <label>Work Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>