force-app/main/default/objects/Job__c/fields/Work_Warranty_Order_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Warranty_Order_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DO NOT USE THIS FIELD</description>
    <label>DEPRECATEDWork Warranty/Order Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>