force-app/main/default/objects/Job__c/recordTypes/Custom_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Custom_Jobs</fullName>
    <active>true</active>
    <label>Custom Jobs</label>
</RecordType>